manifests/jwt/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jwt
  namespace: jwt
  labels:
    app: jwt
spec:
  template:
    metadata:
      name: jwt
      labels:
        app: jwt
    spec:
      affinity:
      containers:
      - name: jwt
        image: webwurst/jwt:0.1.1-testing3
        imagePullPolicy: IfNotPresent
      - name: caddy
        image: giantswarm/caddy:0.10.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: caddy
          protocol: TCP
        volumeMounts:
        - name: caddy-config
          mountPath: /etc/caddy
      volumes:
      - name: caddy-config
        configMap:
          name: caddy
